# pyppet_models

./: README.md  pyproject.toml
examples/franka_research_3/: attach_franka.py  move_franka.py  mujoco_franka.py  multiple_frankas.py
marion_models/franka_research_3/: model.py
marion_models/franka_research_3/assets/: link1.glb  link7.glb
marion_models/franka_research_3/examples/: attach_franka.py  move_franka.py  multiple_frankas.py
marionette_models/franka_research_3/: model.py
marionette_models/franka_research_3/assets/: link0.glb
marionette_models/franka_research_3/collision/: finger.stl  hand.stl  link2.stl  link6.stl  link7.stl
marionette_models/franka_research_3/examples/: attach_franka.py  move_franka.py  multiple_frankas.py
marionette_models/franka_research_3/visual/: finger.glb  hand.glb  link5.glb
models/franka_research_3/: model.py
models/franka_research_3/collision/: link4.stl
models/franka_research_3/temp_mjcf/: franka_research_3.xml  scene.xml
models/franka_research_3/visual/: link2.glb  link3.glb
pyppet_models/franka_research_3/assets/: link4.glb  link6.glb
