[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marionette_models"
requires-python = ">=3.10, <3.13"
version = "0.1.0"

[project.license]
text = "Apache-2.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
marionette = { path = "../marionette", editable = true }

[tool.pixi.tasks]
attach_franka = "python3 marionette_models/franka_research_3/examples/attach_franka.py"
move_franka = "python3 marionette_models/franka_research_3/examples/move_franka.py"
multiple_frankas = "python3 marionette_models/franka_research_3/examples/multiple_frankas.py"
