[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyppet_models"
description = "pyppet_models contains examples for using pyppet: https://github.com/david-dorf/pyppet"
requires-python = ">=3.10, <3.13"
version = "0.1.0"
dependencies = ["pyppet >= 0.2.0"]

[project.license]
text = "MIT"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.tasks]
attach_franka = "python3 pyppet_models/franka_research_3/examples/attach_franka.py"
move_franka = "python3 pyppet_models/franka_research_3/examples/move_franka.py"
multiple_frankas = "python3 pyppet_models/franka_research_3/examples/multiple_frankas.py"
